Code reordering to handle register and unregister.